enhance command